--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,11 @@
   "icons": {
     "128": "img/icon128.png"
   },
-  "version": "1.0",
+  "version": "1.0.1",
   "manifest_version": 2,
   "minimum_chrome_version": "19.0",
   "background": {
-    "page": "background.html"
+    "page": "blocks/background/background.html"
   },
   "permissions": [
     "tabs",
@@ -26,8 +26,8 @@
       ],
       "js": [
         "lib/jquery-1.8.3.min.js",
-        "js/indicators.js",
-        "js/content.js"
+        "blocks/indicators/indicators.js",
+        "blocks/content/content.js"
       ],
       "css": [
         "html/aes_light.css"
@@ -49,7 +49,7 @@
     "img/pause.png",
     "img/save.gif",
     "blank.html",
-    "js/vk_inner.js",
+    "blocks/vk-inner/vk-inner.js",
     "html/2.png"
   ],
   "content_security_policy": "script-src 'self' https://ws.audioscrobbler.com https://ssl.google-analytics.com; object-src 'self'; style-src 'self' 'unsafe-inline';"
