--- a/package.json
+++ b/package.json
@@ -13,7 +13,5 @@
   ],
   "author": "Andrey Skladchikov",
   "license": "ISC",
-  "devDependencies": {
-    "node-libs-browser": "^0.5.0"
-  }
+  "devDependencies": {}
 }
