More refactoring for indicators

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
         "https://vk.com/*"
       ],
       "js": [
+        "blocks/indicators/indicators__utils.js",
         "blocks/indicators/indicators.js",
         "blocks/content/content__bus.js",
         "blocks/content/content__vk-patcher.js",
