--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "scrobbler"
   ],
   "author": "Andrey Skladchikov",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "js-md5": "0.3.0"
+  }
 }
