--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "precopy": "rm -rf dist/*",
     "copy": "bash copy.sh",
     "pack": "cd dist && zip -r -X vk-scrobbler.zip ./*",
+    "read-version": "cat manifest.json | grep '\"version\"' | sed 's/[^0-9\\.]//g'",
     "build": "npm run copy && npm run pack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
