--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
         "https://vk.com/*"
       ],
       "js": [
+        "blocks/namespace/namespace.js",
         "blocks/indicators/indicators__utils.js",
         "blocks/indicators/indicators.js",
         "blocks/content/content__messages.js",
