--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Last.fm Scrobbler for vk.com",
   "scripts": {
     "precopy": "rm -rf dist/*",
-    "copy": "bash copy.sh",
+    "watch": "gulp watch-copy",
+    "copy": "gulp copy",
     "pack": "cd dist && zip -r -X vk-scrobbler.zip ./*",
     "read-version": "cat manifest.json | grep '\"version\"' | sed 's/[^0-9\\.]//g'",
     "build": "npm run copy && npm run pack",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "chai": "^2.3.0",
+    "gulp": "^3.8.11",
+    "gulp-watch": "^4.2.4",
     "karma": "^0.12.32",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.12",
