--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Last.fm Scrobbler for vk.com",
   "scripts": {
     "precopy": "rm -rf dist/*",
-    "watch": "gulp watch-copy",
+    "watch": "rm -rf dist/* && gulp watch-copy",
     "copy": "gulp copy",
     "pack": "cd dist && zip -r -X vk-scrobbler.zip ./*",
     "read-version": "cat manifest.json | grep '\"version\"' | sed 's/[^0-9\\.]//g'",
