--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "pack": "cd dist && zip -r -X vk-scrobbler.zip ./*",
     "read-version": "cat manifest.json | grep '\"version\"' | sed 's/[^0-9\\.]//g'",
     "build": "npm run copy && npm run pack",
+
+    "start": "npm run watch",
     "test": "karma start"
   },
   "keywords": [
