--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
   "name": "__MSG_extName__",
   "description": "__MSG_extDescr__",
   "icons": {
-    "128": "img/icon128.png"
+    "128": "blocks/logo/logo_128.png",
+    "258": "blocks/logo/logo_256.png"
   },
   "version": "1.0.4",
   "manifest_version": 2,
