--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "update_url": "https://clients2.google.com/service/update2/crx",
-  "name": "__MSG_extName__",
-  "description": "__MSG_extDescr__",
+  "name": "VK scrobbler",
+  "description": "Скробблинг проигрываемой на vk.com музыки на last.fm",
   "icons": {
     "128": "blocks/logo/logo_128.png"
   },
