--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vk-scrobbler",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Last.fm Scrobbler for vk.com",
   "scripts": {
     "precopy": "rm -rf dist/*",
     "watch": "rm -rf dist/* && gulp watch-copy",
     "copy": "gulp copy",
-    "pack": "cd dist && zip -r -X vk-scrobbler.zip ./*",
+    "pack": "cd dist && zip -r -X ../vk-scrobbler.zip ./*",
     "read-version": "cat manifest.json | grep '\"version\"' | sed 's/[^0-9\\.]//g'",
     "build": "npm run copy && npm run pack",
 
