--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "copy": "gulp copy",
     "pack": "cd dist && zip -r -X ../vk-scrobbler.zip ./*",
     "read-version": "cat manifest.json | grep '\"version\"' | sed 's/[^0-9\\.]//g'",
+    "prebuild": "npm run lint",
     "build": "npm run copy && npm run pack",
     "start": "npm run watch",
     "test": "karma start",
