--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "karma-chrome-launcher": "^0.1.12",
     "karma-mocha": "^0.1.10",
     "karma-sinon-chai": "^0.3.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17",
+    "sinon": "^1.14.1",
+    "sinon-chrome": "^0.1.1"
   }
 }
