Write bus content block

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,6 +17,7 @@
     "describe": true,
     "it": true,
     "beforeEach": true,
-    "afterEach": true
+    "afterEach": true,
+    "expect": true
   }
 }
