Use bus on content script

--- a/manifest.json
+++ b/manifest.json
@@ -28,8 +28,9 @@
         "blocks/namespace/namespace.js",
         "blocks/indicators/indicators__utils.js",
         "blocks/indicators/indicators.js",
+        "blocks/bus/bus__content.js",
         "blocks/content/content__messages.js",
-        "blocks/content/content__bus.js",
+        "blocks/content/content__bus-wrapper.js",
         "blocks/content/content__vk-patcher.js",
         "blocks/content/content__utils.js",
         "blocks/content/content.js"
