--- a/manifest.json
+++ b/manifest.json
@@ -20,10 +20,7 @@
   ],
   "content_scripts": [
     {
-      "matches": [
-        "http://vk.com/*",
-        "https://vk.com/*"
-      ],
+      "matches": ["*://*.vk.com/*"],
       "js": [
         "blocks/namespace/namespace.js",
         "blocks/indicators/indicators__utils.js",
@@ -40,11 +37,13 @@
       ]
     }
   ],
+  "externally_connectable": {
+    "matches": ["*://*.vk.com/*"]
+  },
   "homepage_url": "http://vkontakte.ru/vk_scrobbler",
   "web_accessible_resources": [
     "blocks/indicators/__icon/*",
-    "img/*",
-    "blocks/vk-inner/vk-inner.js"
+    "blocks/vk-inner/*"
   ],
   "content_security_policy": "script-src 'self' https://ws.audioscrobbler.com https://ssl.google-analytics.com; object-src 'self'; style-src 'self' 'unsafe-inline';"
 }
