Remove unneeded permissions

--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,7 @@
   "permissions": [
     "tabs",
     "notifications",
-    "http://*/*",
-    "https://*/*",
-    "cookies"
+    "*://*.vk.com/*"
   ],
   "content_scripts": [
     {
