--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_script:
 script:
   - "npm test"
 
+after_script:
+  - "cat coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+
 cache:
   directories:
     - node_modules
