--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,7 @@ before_script:
   - "npm run lint"
 
 script:
-  - "npm test"
-
-after_script:
-  - "cat coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  - "npm test -- --coverage && npm run coveralls"
 
 cache:
   directories:
