--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npm run copy && npm run pack",
     "start": "npm run watch",
     "test": "node ./node_modules/karma/bin/karma start",
+    "coveralls": "gulp coveralls",
     "lint": "jshint $npm_package_config_src/*"
   },
   "repository": {
@@ -35,6 +36,7 @@
     "chai": "^2.3.0",
     "coveralls": "~2.11.2",
     "gulp": "^3.8.11",
+    "gulp-coveralls": "0.1.4",
     "gulp-watch": "^4.2.4",
     "jshint": "^2.7.0",
     "karma": "^0.12.32",
