--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ before_script:
   - "npm run lint"
 
 script:
-  - "npm test -- --coverage && npm run coveralls"
+  - "npm test"
+
+after_script:
+  - "cat coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
 
 cache:
   directories:
