--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,16 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  pip install codecov
 
 before_script:
   - "npm run lint"
 
 script:
   - "npm test"
+
+after_success:
+  codecov
 
 cache:
   directories:
