--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  pip install codecov
 
 before_script:
   - "npm run lint"
@@ -16,7 +15,7 @@ script:
   - "npm test"
 
 after_success:
-  codecov
+  cat ./coverage/chrome/lcov.info | ./node_modules/.bin/codecov
 
 cache:
   directories:
