--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "chai": "^2.3.0",
+    "codecov.io": "^0.1.2",
     "gulp": "^3.8.11",
     "gulp-watch": "^4.2.4",
     "jshint": "^2.7.0",
