--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script:
   - "npm test"
 
 after_success:
-  ls coverage
-  cat coverage/chrome/lcov.info | ./node_modules/.bin/codecov
+  - ls coverage
+  - cat coverage/chrome/lcov.info | ./node_modules/.bin/codecov
 
 cache:
   directories:
