--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - "npm test"
 
 after_success:
-  - cat coverage/**/lcov.info | ./node_modules/.bin/codecov
+  - cat coverage/chromium/lcov.info | ./node_modules/.bin/codecov
 
 cache:
   directories:
