--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "js-md5": "0.3.0"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
+    "chai": "3.0.0",
     "codecov.io": "^0.1.2",
     "gulp": "^3.8.11",
     "gulp-watch": "^4.2.4",
