--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-chrome-launcher": "^0.2",
     "karma-coverage": "^0.4",
     "karma-mocha": "^0.2",
+    "karma-sinon": "1.0",
     "karma-sinon-chai": "^1.0.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
