--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
         "blocks/namespace/namespace.js",
         "blocks/indicators/indicators__utils.js",
         "blocks/indicators/indicators.js",
+        "blocks/indicators/indicators__old.js",
         "blocks/bus/bus__content.js",
         "blocks/content/content__messages.js",
         "blocks/content/content__bus-wrapper.js",
@@ -31,7 +32,8 @@
         "blocks/content/content.js"
       ],
       "css": [
-        "blocks/indicators/indicators.css"
+        "blocks/indicators/indicators.css",
+        "blocks/indicators/indicators__old.css"
       ]
     }
   ],
