--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "js-md5": "0.3.0"
   },
   "devDependencies": {
-    "chai": "3.0.0",
+    "chai": "3.5.0",
     "codecov.io": "^0.1.2",
     "electron-prebuilt": "^0.37.6",
     "gulp": "^3.8.11",
     "gulp-watch": "^4.2.4",
     "jshint": "^2.7.0",
-    "karma": "^0.12.32",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2",
-    "karma-coverage": "^0.4",
+    "karma-coverage": "0.5.5",
     "karma-electron-launcher": "^0.1.0",
     "karma-mocha": "^0.2",
     "karma-sinon": "1.0",
-    "karma-sinon-chai": "1.0.0",
+    "karma-sinon-chai": "1.2.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
     "sinon-chai": "2.8.0",
