--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "precopy": "rm -rf $npm_package_config_dist/*",
     "watch": "rm -rf $npm_package_config_dist/* && gulp watch-copy",
     "copy": "gulp copy",
-    "pack": "cd $npm_package_config_dist && zip -r -X ../vk-scrobbler-$npm_package_version.zip ./*",
+    "pack": "mkdir build && cd $npm_package_config_dist && zip -r -X ../build/vk-scrobbler-$npm_package_version.zip ./*",
+    "packff": "mkdir build && cd $npm_package_config_dist && zip -r -X ../build/vk-scrobbler-$npm_package_version.xpi ./*",
     "prebuild": "npm run lint",
     "build": "npm run copy && npm run pack",
     "start": "npm run watch",
