--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "icons": {
     "128": "blocks/logo/logo_128.png"
   },
-  "version": "2.0.1",
+  "version": "2.0.1-ff1",
   "manifest_version": 2,
   "minimum_chrome_version": "41.0",
   "background": {
@@ -24,7 +24,7 @@
   "applications": {
     "gecko": {
       "id": "vk-scrobbler@stsdc.org",
-      "strict_min_version": "45.0"
+      "strict_min_version": "47.0"
     }
   },
   "permissions": [
