--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vk-scrobbler",
-  "version": "2.0.1",
+  "version": "2.0.1-ff1",
   "description": "Last.fm Scrobbler for vk.com",
   "config": {
     "src": "blocks",
@@ -28,7 +28,7 @@
     "scrobbler"
   ],
   "author": "Andrey Skladchikov",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "js-md5": "0.3.0"
   },
@@ -37,7 +37,7 @@
     "codecov.io": "^0.1.2",
     "electron-prebuilt": "^0.37.6",
     "gulp": "^3.8.11",
-    "gulp-watch": "^4.2.4",
+    "gulp-env": "^0.4.0",
     "jshint": "^2.7.0",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2",
@@ -49,6 +49,7 @@
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
     "sinon-chai": "2.8.0",
-    "sinon-chrome": "0.1.2"
+    "sinon-chrome": "0.1.2",
+    "web-ext": "^1.0.1"
   }
 }
