--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vk-scrobbler",
-  "version": "2.0.1-ff1",
+  "version": "2.0.1",
   "description": "Last.fm Scrobbler for vk.com",
   "config": {
     "src": "blocks",
@@ -11,7 +11,6 @@
     "watch": "gulp dist",
     "copy": "gulp copy",
     "pack": "mkdir build && cd $npm_package_config_dist && zip -r -X ../build/vk-scrobbler-$npm_package_version.zip ./*",
-    "packff": "mkdir build && cd $npm_package_config_dist && zip -r -X ../build/vk-scrobbler-$npm_package_version.xpi ./*",
     "prebuild": "npm run lint",
     "build": "npm run copy && npm run pack",
     "start": "npm run watch",
