--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "last.fm",
     "scrobbler"
   ],
-  "author": "Andrey Skladchikov",
-  "license": "ISC",
+  "contributors": ["Andrey Skladchikov", "Stanisław Dac"],
+  "license": "MIT",
   "dependencies": {
     "js-md5": "0.3.0"
   },
