--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "codecov.io": "^0.1.2",
     "electron-prebuilt": "^0.37.6",
     "gulp": "^3.8.11",
+    "gulp-env": "^0.4.0",
     "gulp-jshint": "^2.0.0",
     "jshint": "^2.7.0",
     "karma": "^0.13.22",
