fix other gulp dependencies

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "codecov.io": "^0.1.2",
     "electron-prebuilt": "^0.37.6",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.2",
     "gulp-env": "^0.4.0",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-zip": "^3.2.0",
     "jshint": "^2.7.0",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2",
