--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "watch": "gulp watch",
     "copy": "gulp cp",
-    "create_env": "> .env.json",
+    "create_env": "echo '{}' > .env.json",
     "prebuild": "npm run lint",
     "build": "gulp build",
     "start": "npm run watch",
