--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-mocha": "^0.2",
     "karma-sinon": "1.0",
     "karma-sinon-chai": "1.2.0",
+    "lolex": "^1.4.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
     "sinon-chai": "2.8.0",
