--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "codecov.io": "^0.1.2",
     "electron-prebuilt": "^0.37.6",
     "gulp": "^3.8.11",
+    "gulp-bump": "^2.2.0",
     "gulp-clean": "^0.3.2",
     "gulp-jshint": "^2.0.1",
     "gulp-zip": "^3.2.0",
