--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "icons": {
     "128": "blocks/logo/logo_128.png"
   },
-  "version": "2.0.4",
+  "version": "2.0.4.2",
   "manifest_version": 2,
   "minimum_chrome_version": "41.0",
   "background": {
@@ -74,5 +74,5 @@
     "blocks/vk-inner/vk-inner__player.js",
     "blocks/vk-inner/vk-inner.js"
   ],
-  "content_security_policy": "script-src 'self' https://ws.audioscrobbler.com https://ssl.google-analytics.com; object-src 'self'; style-src 'self' 'unsafe-inline';"
+  "content_security_policy": "script-src 'self';object-src 'self'; style-src 'self' 'unsafe-inline';"
 }
