--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vk-scrobbler",
-  "version": "2.0.5-0",
+  "version": "2.0.4.2",
   "description": "Last.fm Scrobbler for vk.com",
   "scripts": {
     "watch": "gulp watch",
