--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "chai": "3.5.0",
     "codecov.io": "^0.1.2",
     "electron-prebuilt": "^0.37.6",
-    "gulp": "^3.9.1",
-    "gulp-bump": "^2.2.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-jshint": "^2.0.1",
+    "gulp": "3.9.1",
+    "gulp-bump": "2.4.0",
+    "gulp-clean": "0.3.2",
+    "gulp-jshint": "2.0.1",
     "gulp-zip": "^3.2.0",
     "jshint": "^2.7.0",
     "karma": "^0.13.22",
