Add option to adapt manifest for chrome - --chromeonly. Closes #30.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "create_env": "echo '{}' > .env.json",
     "prebuild": "npm run lint",
     "build": "gulp build",
-    "build-chrome": "gulp build:chrome",
+    "build-chrome": "gulp build:chrome -- --chromeonly",
     "build-firefox": "gulp build:firefox",
     "start": "npm run watch",
+    "start-chrome": "npm run watch -- --chromeonly",
     "test": "node ./node_modules/karma/bin/karma start",
     "lint": "gulp lint"
   },
@@ -39,6 +40,7 @@
     "gulp": "3.9.1",
     "gulp-bump": "2.4.0",
     "gulp-jshint": "2.0.1",
+    "gulp-json-editor": "^2.2.1",
     "gulp-zip": "^3.2.0",
     "jshint": "^2.7.0",
     "karma": "^0.13.22",
